--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <button onclick="showShop('spawners')">Spawners</button>
       <button onclick="showShop('workstations')">Workstations</button>
       <button onclick="showShop('z_everythingelse')">Everything Else</button>
+      <button onclick="showShop('blocks')">Blocks</button>
     </div>
   </header>
 
