--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
       <button onclick="showShop('workstations')">Workstations</button>
       <button onclick="showShop('z_everythingelse')">Everything Else</button>
     </div>
+    <button onclick="triggerUpdate()">Update Prices</button>
+    <button onclick="comparePrices()">Compare Prices</button>
   </header>
 
   <main>
