--- a/data/farming.html
+++ b/data/farming.html
@@ -2,60 +2,44 @@
   <thead>
     <tr>
       <th>Material</th>
-      <th>Old Buy Price</th>
-      <th>New Buy Price</th>
-      <th>Buy Price Change (%)</th>
-      <th>Old Sell Price</th>
-      <th>New Sell Price</th>
-      <th>Sell Price Change (%)</th>
-      <th>Rarity/Logic Applied</th>
+      <th>Old Buy</th>
+      <th>New Buy</th>
+      <th>Buy %</th>
+      <th>Old Sell</th>
+      <th>New Sell</th>
+      <th>Sell %</th>
+      <th>Logic</th>
     </tr>
   </thead>
   <tbody>
-    <tr><td>BAMBOO</td><td>15</td><td><strong>16.5</strong></td><td>10.0%</td><td>11.25</td><td><strong>12.38</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>BEE_NEST</td><td>15</td><td><strong>16.5</strong></td><td>10.0%</td><td>11.25</td><td><strong>12.38</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>BEEHIVE</td><td>15</td><td><strong>16.5</strong></td><td>10.0%</td><td>11.25</td><td><strong>12.38</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>BEETROOT</td><td>5</td><td><strong>5.5</strong></td><td>10.0%</td><td>3.75</td><td><strong>4.13</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>BEETROOT_SEEDS</td><td>3</td><td><strong>3.3</strong></td><td>10.0%</td><td>2.25</td><td><strong>2.48</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>BROWN_MUSHROOM</td><td>15</td><td><strong>16.5</strong></td><td>10.0%</td><td>11.25</td><td><strong>12.38</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>CACTUS</td><td>15</td><td><strong>16.5</strong></td><td>10.0%</td><td>11.25</td><td><strong>12.38</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>CARROT</td><td>7</td><td><strong>7.7</strong></td><td>10.0%</td><td>5.25</td><td><strong>5.78</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>CHORUS_FLOWER</td><td>15</td><td><strong>16.5</strong></td><td>10.0%</td><td>11.25</td><td><strong>12.38</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>CHORUS_FRUIT</td><td>180</td><td><strong>198.0</strong></td><td>10.0%</td><td>135</td><td><strong>148.5</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>COCOA_BEANS</td><td>20</td><td><strong>22.0</strong></td><td>10.0%</td><td>15</td><td><strong>16.5</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>CRIMSON_FUNGUS</td><td>20</td><td><strong>22.0</strong></td><td>10.0%</td><td>15</td><td><strong>16.5</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>EGG</td><td>18</td><td><strong>19.8</strong></td><td>10.0%</td><td>13.5</td><td><strong>14.85</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>KELP</td><td>6</td><td><strong>6.6</strong></td><td>10.0%</td><td>4.5</td><td><strong>4.95</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>LEATHER</td><td>15</td><td><strong>16.5</strong></td><td>10.0%</td><td>11.25</td><td><strong>12.38</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>MELON</td><td>21</td><td><strong>23.1</strong></td><td>10.0%</td><td>15.75</td><td><strong>17.33</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>MELON_SEEDS</td><td>10</td><td><strong>11.0</strong></td><td>10.0%</td><td>7.5</td><td><strong>8.25</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>MELON_SLICE</td><td>7</td><td><strong>7.7</strong></td><td>10.0%</td><td>5.25</td><td><strong>5.78</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>NETHER_WART</td><td>40</td><td><strong>44.0</strong></td><td>10.0%</td><td>30</td><td><strong>33.0</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>PITCHER_POD</td><td>15</td><td><strong>16.5</strong></td><td>10.0%</td><td>11.25</td><td><strong>12.38</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>POTATO</td><td>15</td><td><strong>16.5</strong></td><td>10.0%</td><td>11.25</td><td><strong>12.38</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>PUMPKIN</td><td>15</td><td><strong>16.5</strong></td><td>10.0%</td><td>10.25</td><td><strong>11.28</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>PUMPKIN_SEEDS</td><td>12</td><td><strong>13.2</strong></td><td>10.0%</td><td>9</td><td><strong>9.9</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>RED_MUSHROOM</td><td>15</td><td><strong>16.5</strong></td><td>10.0%</td><td>11.25</td><td><strong>12.38</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>SUGAR_CANE</td><td>15</td><td><strong>16.5</strong></td><td>10.0%</td><td>11.25</td><td><strong>12.38</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-  </tbody>
-</table>
-<table>
-  <thead>
-    <tr>
-      <th>Material</th>
-      <th>Old Buy Price</th>
-      <th>New Buy Price</th>
-      <th>Buy Price Change (%)</th>
-      <th>Old Sell Price</th>
-      <th>New Sell Price</th>
-      <th>Sell Price Change (%)</th>
-      <th>Rarity/Logic Applied</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr><td>TORCHFLOWER_SEEDS</td><td>15</td><td><strong>16.5</strong></td><td>10.0%</td><td>11.25</td><td><strong>12.38</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>WARPED_FUNGUS</td><td>15</td><td><strong>16.5</strong></td><td>10.0%</td><td>12.25</td><td><strong>13.48</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>WHEAT</td><td>5</td><td><strong>5.5</strong></td><td>10.0%</td><td>3.75</td><td><strong>4.13</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>WHEAT_SEEDS</td><td>3</td><td><strong>3.3</strong></td><td>10.0%</td><td>2.25</td><td><strong>2.48</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
+    <tr><td>BAMBOO</td><td>15.0</td><td><strong>20.85</strong></td><td>39.0%</td><td>11.25</td><td><strong>12.72</strong></td><td>13.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>CHORUS_FRUIT</td><td>180.0</td><td><strong>250.2</strong></td><td>39.0%</td><td>135.0</td><td><strong>152.62</strong></td><td>13.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>COCOA_BEANS</td><td>20.0</td><td><strong>27.8</strong></td><td>39.0%</td><td>15.0</td><td><strong>16.96</strong></td><td>13.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>CRIMSON_FUNGUS</td><td>20.0</td><td><strong>27.8</strong></td><td>39.0%</td><td>15.0</td><td><strong>16.96</strong></td><td>13.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>EGG</td><td>24.0</td><td><strong>33.36</strong></td><td>39.0%</td><td>20.0</td><td><strong>20.35</strong></td><td>1.8%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>KELP</td><td>6.0</td><td><strong>8.34</strong></td><td>39.0%</td><td>4.5</td><td><strong>5.09</strong></td><td>13.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>LEATHER</td><td>15.0</td><td><strong>20.85</strong></td><td>39.0%</td><td>11.25</td><td><strong>12.72</strong></td><td>13.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>MELON</td><td>21.0</td><td><strong>29.19</strong></td><td>39.0%</td><td>15.75</td><td><strong>17.81</strong></td><td>13.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>MELON_SEEDS</td><td>10.0</td><td><strong>13.9</strong></td><td>39.0%</td><td>7.5</td><td><strong>8.48</strong></td><td>13.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>MELON_SLICE</td><td>7.0</td><td><strong>9.73</strong></td><td>39.0%</td><td>5.25</td><td><strong>5.94</strong></td><td>13.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>NETHER_WART</td><td>40.0</td><td><strong>55.6</strong></td><td>39.0%</td><td>30.0</td><td><strong>33.92</strong></td><td>13.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>BEE_NEST</td><td>15.0</td><td><strong>20.85</strong></td><td>39.0%</td><td>11.25</td><td><strong>12.72</strong></td><td>13.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>PITCHER_POD</td><td>15.0</td><td><strong>20.85</strong></td><td>39.0%</td><td>11.25</td><td><strong>12.72</strong></td><td>13.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>POTATO</td><td>15.0</td><td><strong>20.85</strong></td><td>39.0%</td><td>11.25</td><td><strong>12.72</strong></td><td>13.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>PUMPKIN</td><td>15.0</td><td><strong>20.85</strong></td><td>39.0%</td><td>10.25</td><td><strong>12.72</strong></td><td>24.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>PUMPKIN_SEEDS</td><td>12.0</td><td><strong>16.68</strong></td><td>39.0%</td><td>9.0</td><td><strong>10.17</strong></td><td>13.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>RED_MUSHROOM</td><td>15.0</td><td><strong>20.85</strong></td><td>39.0%</td><td>11.25</td><td><strong>12.72</strong></td><td>13.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>SUGAR_CANE</td><td>15.0</td><td><strong>20.85</strong></td><td>39.0%</td><td>11.25</td><td><strong>12.72</strong></td><td>13.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>TORCHFLOWER_SEEDS</td><td>15.0</td><td><strong>20.85</strong></td><td>39.0%</td><td>11.25</td><td><strong>12.72</strong></td><td>13.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>WARPED_FUNGUS</td><td>15.0</td><td><strong>20.85</strong></td><td>39.0%</td><td>12.25</td><td><strong>12.72</strong></td><td>3.8%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>WHEAT</td><td>5.0</td><td><strong>6.95</strong></td><td>39.0%</td><td>3.75</td><td><strong>4.24</strong></td><td>13.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>WHEAT_SEEDS</td><td>3.0</td><td><strong>4.17</strong></td><td>39.0%</td><td>2.25</td><td><strong>2.54</strong></td><td>12.9%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>BEEHIVE</td><td>15.0</td><td><strong>20.85</strong></td><td>39.0%</td><td>11.25</td><td><strong>12.72</strong></td><td>13.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>BEETROOT</td><td>5.0</td><td><strong>6.95</strong></td><td>39.0%</td><td>3.75</td><td><strong>4.24</strong></td><td>13.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>BEETROOT_SEEDS</td><td>3.0</td><td><strong>4.17</strong></td><td>39.0%</td><td>2.25</td><td><strong>2.54</strong></td><td>12.9%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>BROWN_MUSHROOM</td><td>15.0</td><td><strong>20.85</strong></td><td>39.0%</td><td>11.25</td><td><strong>12.72</strong></td><td>13.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>CACTUS</td><td>15.0</td><td><strong>20.85</strong></td><td>39.0%</td><td>11.25</td><td><strong>12.72</strong></td><td>13.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>CARROT</td><td>7.0</td><td><strong>9.73</strong></td><td>39.0%</td><td>5.25</td><td><strong>5.94</strong></td><td>13.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>CHORUS_FLOWER</td><td>15.0</td><td><strong>20.85</strong></td><td>39.0%</td><td>11.25</td><td><strong>12.72</strong></td><td>13.1%</td><td>39% Hike, 39% Gap</td></tr>
   </tbody>
 </table>
