--- a/data/redstone.html
+++ b/data/redstone.html
@@ -2,65 +2,49 @@
   <thead>
     <tr>
       <th>Material</th>
-      <th>Old Buy Price</th>
-      <th>New Buy Price</th>
-      <th>Buy Price Change (%)</th>
-      <th>Old Sell Price</th>
-      <th>New Sell Price</th>
-      <th>Sell Price Change (%)</th>
-      <th>Rarity/Logic Applied</th>
+      <th>Old Buy</th>
+      <th>New Buy</th>
+      <th>Buy %</th>
+      <th>Old Sell</th>
+      <th>New Sell</th>
+      <th>Sell %</th>
+      <th>Logic</th>
     </tr>
   </thead>
   <tbody>
-    <tr><td>CAULDRON</td><td>600</td><td><strong>660.0</strong></td><td>10.0%</td><td>481.68</td><td><strong>529.85</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>LIGHTNING_ROD</td><td>13.5</td><td><strong>14.85</strong></td><td>10.0%</td><td>9.48</td><td><strong>10.43</strong></td><td>10.02%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>NOTE_BLOCK</td><td>23</td><td><strong>25.3</strong></td><td>10.0%</td><td>13.85</td><td><strong>15.24</strong></td><td>10.04%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>OBSERVER</td><td>40</td><td><strong>44.0</strong></td><td>10.0%</td><td>23.7</td><td><strong>26.07</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>REDSTONE_LAMP</td><td>44.4</td><td><strong>48.84</strong></td><td>10.0%</td><td>37.74</td><td><strong>41.51</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>REDSTONE_TORCH</td><td>15</td><td><strong>16.5</strong></td><td>10.0%</td><td>9.85</td><td><strong>10.84</strong></td><td>10.05%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>RESPAWN_ANCHOR</td><td>50</td><td><strong>55.0</strong></td><td>10.0%</td><td>40</td><td><strong>44.0</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>TARGET</td><td>105</td><td><strong>115.5</strong></td><td>10.0%</td><td>73.15</td><td><strong>80.47</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>TRIPWIRE_HOOK</td><td>40</td><td><strong>44.0</strong></td><td>10.0%</td><td>29.17</td><td><strong>32.09</strong></td><td>10.01%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>COMPARATOR</td><td>30</td><td><strong>33.0</strong></td><td>10.0%</td><td>20</td><td><strong>22.0</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>REPEATER</td><td>20</td><td><strong>22.0</strong></td><td>10.0%</td><td>11</td><td><strong>12.1</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>CRAFTER</td><td>40</td><td><strong>44.0</strong></td><td>10.0%</td><td>30.82</td><td><strong>33.9</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>CHERRY_BUTTON</td><td>40</td><td><strong>44.0</strong></td><td>10.0%</td><td>31.95</td><td><strong>35.15</strong></td><td>10.01%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>OAK_BUTTON</td><td>10</td><td><strong>11.0</strong></td><td>10.0%</td><td>7.66</td><td><strong>8.43</strong></td><td>10.05%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>STONE_BUTTON</td><td>10</td><td><strong>11.0</strong></td><td>10.0%</td><td>6.7</td><td><strong>7.37</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>PISTON</td><td>40</td><td><strong>44.0</strong></td><td>10.0%</td><td>30.64</td><td><strong>33.7</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>STICKY_PISTON</td><td>40</td><td><strong>44.0</strong></td><td>10.0%</td><td>26.78</td><td><strong>29.46</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>CHERRY_PRESSURE_PLATE</td><td>1</td><td><strong>1.1</strong></td><td>10.0%</td><td>0.5</td><td><strong>0.55</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>OAK_PRESSURE_PLATE</td><td>1</td><td><strong>1.1</strong></td><td>10.0%</td><td>0.5</td><td><strong>0.55</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>STONE_PRESSURE_PLATE</td><td>1</td><td><strong>1.1</strong></td><td>10.0%</td><td>0.5</td><td><strong>0.55</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>LIGHT_WEIGHTED_PRESSURE_PLATE</td><td>1</td><td><strong>1.1</strong></td><td>10.0%</td><td>0.5</td><td><strong>0.55</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>HEAVY_WEIGHTED_PRESSURE_PLATE</td><td>1</td><td><strong>1.1</strong></td><td>10.0%</td><td>0.5</td><td><strong>0.55</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>DAYLIGHT_DETECTOR</td><td>45</td><td><strong>49.5</strong></td><td>10.0%</td><td>28</td><td><strong>30.8</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>CALIBRATED_SCULK_SENSOR</td><td>40</td><td><strong>44.0</strong></td><td>10.0%</td><td>31.73</td><td><strong>34.9</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-  </tbody>
-</table>
-<table>
-  <thead>
-    <tr>
-      <th>Material</th>
-      <th>Old Buy Price</th>
-      <th>New Buy Price</th>
-      <th>Buy Price Change (%)</th>
-      <th>Old Sell Price</th>
-      <th>New Sell Price</th>
-      <th>Sell Price Change (%)</th>
-      <th>Rarity/Logic Applied</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr><td>SCULK_SENSOR</td><td>40</td><td><strong>44.0</strong></td><td>10.0%</td><td>31.89</td><td><strong>35.08</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>CHERRY_TRAPDOOR</td><td>1.5</td><td><strong>1.65</strong></td><td>10.0%</td><td>0.5</td><td><strong>0.55</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>OAK_TRAPDOOR</td><td>1.5</td><td><strong>1.65</strong></td><td>10.0%</td><td>0.5</td><td><strong>0.55</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>IRON_TRAPDOOR</td><td>1.5</td><td><strong>1.65</strong></td><td>10.0%</td><td>0.5</td><td><strong>0.55</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>DISPENSER</td><td>25</td><td><strong>27.5</strong></td><td>10.0%</td><td>18</td><td><strong>19.8</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>DROPPER</td><td>25</td><td><strong>27.5</strong></td><td>10.0%</td><td>18</td><td><strong>19.8</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>HOPPER</td><td>25</td><td><strong>27.5</strong></td><td>10.0%</td><td>18</td><td><strong>19.8</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>IRON_DOOR</td><td>40</td><td><strong>44.0</strong></td><td>10.0%</td><td>27.97</td><td><strong>30.77</strong></td><td>10.01%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>JUKEBOX</td><td>40</td><td><strong>44.0</strong></td><td>10.0%</td><td>26.49</td><td><strong>29.14</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>LEVER</td><td>10</td><td><strong>11.0</strong></td><td>10.0%</td><td>6.88</td><td><strong>7.57</strong></td><td>10.03%</td><td>Common (10% Increase)</td></tr>
+    <tr><td>CAULDRON</td><td>600.0</td><td><strong>834.0</strong></td><td>39.0%</td><td>481.68</td><td><strong>508.74</strong></td><td>5.6%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>LIGHTNING_ROD</td><td>13.5</td><td><strong>18.77</strong></td><td>39.0%</td><td>9.48</td><td><strong>11.45</strong></td><td>20.8%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>NOTE_BLOCK</td><td>23.0</td><td><strong>31.97</strong></td><td>39.0%</td><td>13.85</td><td><strong>19.5</strong></td><td>40.8%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>OBSERVER</td><td>40.0</td><td><strong>55.6</strong></td><td>39.0%</td><td>23.7</td><td><strong>33.92</strong></td><td>43.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>REDSTONE_LAMP</td><td>44.4</td><td><strong>61.72</strong></td><td>39.0%</td><td>37.74</td><td><strong>37.65</strong></td><td>-0.2%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>REDSTONE_TORCH</td><td>15.0</td><td><strong>20.85</strong></td><td>39.0%</td><td>9.85</td><td><strong>12.72</strong></td><td>29.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>RESPAWN_ANCHOR</td><td>50.0</td><td><strong>69.5</strong></td><td>39.0%</td><td>40.0</td><td><strong>42.39</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>TARGET</td><td>105.0</td><td><strong>145.95</strong></td><td>39.0%</td><td>73.15</td><td><strong>89.03</strong></td><td>21.7%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>TRIPWIRE_HOOK</td><td>40.0</td><td><strong>55.6</strong></td><td>39.0%</td><td>29.17</td><td><strong>33.92</strong></td><td>16.3%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>COMPARATOR</td><td>30.0</td><td><strong>41.7</strong></td><td>39.0%</td><td>20.0</td><td><strong>25.44</strong></td><td>27.2%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>REPEATER</td><td>20.0</td><td><strong>27.8</strong></td><td>39.0%</td><td>11.0</td><td><strong>16.96</strong></td><td>54.2%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>CRAFTER</td><td>40.0</td><td><strong>55.6</strong></td><td>39.0%</td><td>30.82</td><td><strong>33.92</strong></td><td>10.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>CHERRY_BUTTON</td><td>40.0</td><td><strong>55.6</strong></td><td>39.0%</td><td>31.95</td><td><strong>33.92</strong></td><td>6.2%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>OAK_BUTTON</td><td>10.0</td><td><strong>13.9</strong></td><td>39.0%</td><td>7.66</td><td><strong>8.48</strong></td><td>10.7%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>STONE_BUTTON</td><td>10.0</td><td><strong>13.9</strong></td><td>39.0%</td><td>6.7</td><td><strong>8.48</strong></td><td>26.6%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>PISTON</td><td>40.0</td><td><strong>55.6</strong></td><td>39.0%</td><td>30.64</td><td><strong>33.92</strong></td><td>10.7%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>STICKY_PISTON</td><td>40.0</td><td><strong>55.6</strong></td><td>39.0%</td><td>26.78</td><td><strong>33.92</strong></td><td>26.7%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>CHERRY_PRESSURE_PLATE</td><td>1.0</td><td><strong>1.39</strong></td><td>39.0%</td><td>0.5</td><td><strong>0.85</strong></td><td>70.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>OAK_PRESSURE_PLATE</td><td>1.0</td><td><strong>1.39</strong></td><td>39.0%</td><td>0.5</td><td><strong>0.85</strong></td><td>70.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>STONE_PRESSURE_PLATE</td><td>1.0</td><td><strong>1.39</strong></td><td>39.0%</td><td>0.5</td><td><strong>0.85</strong></td><td>70.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>LIGHT_WEIGHTED_PRESSURE_PLATE</td><td>1.0</td><td><strong>1.39</strong></td><td>39.0%</td><td>0.5</td><td><strong>0.85</strong></td><td>70.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>HEAVY_WEIGHTED_PRESSURE_PLATE</td><td>1.0</td><td><strong>1.39</strong></td><td>39.0%</td><td>0.5</td><td><strong>0.85</strong></td><td>70.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>DAYLIGHT_DETECTOR</td><td>45.0</td><td><strong>62.55</strong></td><td>39.0%</td><td>28.0</td><td><strong>38.16</strong></td><td>36.3%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>CALIBRATED_SCULK_SENSOR</td><td>40.0</td><td><strong>55.6</strong></td><td>39.0%</td><td>31.73</td><td><strong>33.92</strong></td><td>6.9%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>SCULK_SENSOR</td><td>40.0</td><td><strong>55.6</strong></td><td>39.0%</td><td>31.89</td><td><strong>33.92</strong></td><td>6.4%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>CHERRY_TRAPDOOR</td><td>1.5</td><td><strong>2.08</strong></td><td>39.0%</td><td>0.5</td><td><strong>1.27</strong></td><td>154.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>OAK_TRAPDOOR</td><td>1.5</td><td><strong>2.08</strong></td><td>39.0%</td><td>0.5</td><td><strong>1.27</strong></td><td>154.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>IRON_TRAPDOOR</td><td>1.5</td><td><strong>2.08</strong></td><td>39.0%</td><td>0.5</td><td><strong>1.27</strong></td><td>154.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>DISPENSER</td><td>25.0</td><td><strong>34.75</strong></td><td>39.0%</td><td>18.0</td><td><strong>21.2</strong></td><td>17.8%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>DROPPER</td><td>25.0</td><td><strong>34.75</strong></td><td>39.0%</td><td>18.0</td><td><strong>21.2</strong></td><td>17.8%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>HOPPER</td><td>25.0</td><td><strong>34.75</strong></td><td>39.0%</td><td>18.0</td><td><strong>21.2</strong></td><td>17.8%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>IRON_DOOR</td><td>40.0</td><td><strong>55.6</strong></td><td>39.0%</td><td>27.97</td><td><strong>33.92</strong></td><td>21.3%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>JUKEBOX</td><td>40.0</td><td><strong>55.6</strong></td><td>39.0%</td><td>26.49</td><td><strong>33.92</strong></td><td>28.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>LEVER</td><td>10.0</td><td><strong>13.9</strong></td><td>39.0%</td><td>6.88</td><td><strong>8.48</strong></td><td>23.3%</td><td>39% Hike, 39% Gap</td></tr>
   </tbody>
 </table>
