--- a/data/food.html
+++ b/data/food.html
@@ -2,36 +2,36 @@
   <thead>
     <tr>
       <th>Material</th>
-      <th>Old Buy Price</th>
-      <th>New Buy Price</th>
-      <th>Buy Price Change (%)</th>
-      <th>Old Sell Price</th>
-      <th>New Sell Price</th>
-      <th>Sell Price Change (%)</th>
-      <th>Rarity/Logic Applied</th>
+      <th>Old Buy</th>
+      <th>New Buy</th>
+      <th>Buy %</th>
+      <th>Old Sell</th>
+      <th>New Sell</th>
+      <th>Sell %</th>
+      <th>Logic</th>
     </tr>
   </thead>
   <tbody>
-    <tr><td>APPLE</td><td>8</td><td><strong>8.8</strong></td><td>10.0%</td><td>6.4</td><td><strong>7.04</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>BAKED_POTATO</td><td>15</td><td><strong>16.5</strong></td><td>10.0%</td><td>12</td><td><strong>13.2</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>COOKED_BEEF</td><td>28</td><td><strong>30.8</strong></td><td>10.0%</td><td>22.4</td><td><strong>24.64</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>COOKED_CHICKEN</td><td>28</td><td><strong>30.8</strong></td><td>10.0%</td><td>22.4</td><td><strong>24.64</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>COOKED_MUTTON</td><td>28</td><td><strong>30.8</strong></td><td>10.0%</td><td>22.4</td><td><strong>24.64</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>COOKED_PORKCHOP</td><td>28</td><td><strong>30.8</strong></td><td>10.0%</td><td>22.4</td><td><strong>24.64</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>COOKED_RABBIT</td><td>28</td><td><strong>30.8</strong></td><td>10.0%</td><td>22.4</td><td><strong>24.64</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>BEEF</td><td>28</td><td><strong>30.8</strong></td><td>10.0%</td><td>22.4</td><td><strong>24.64</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>CHICKEN</td><td>28</td><td><strong>30.8</strong></td><td>10.0%</td><td>22.4</td><td><strong>24.64</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>MUTTON</td><td>28</td><td><strong>30.8</strong></td><td>10.0%</td><td>22.4</td><td><strong>24.64</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>PORKCHOP</td><td>28</td><td><strong>30.8</strong></td><td>10.0%</td><td>22.4</td><td><strong>24.64</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>BREAD</td><td>15</td><td><strong>16.5</strong></td><td>10.0%</td><td>12</td><td><strong>13.2</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>RABBIT</td><td>15</td><td><strong>16.5</strong></td><td>10.0%</td><td>12</td><td><strong>13.2</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>BEETROOT_SOUP</td><td>44</td><td><strong>52.8</strong></td><td>20.0%</td><td>35.2</td><td><strong>42.24</strong></td><td>20.0%</td><td>Uncommon (20% Increase)</td></tr>
-    <tr><td>CAKE</td><td>85</td><td><strong>102.0</strong></td><td>20.0%</td><td>68</td><td><strong>81.6</strong></td><td>20.0%</td><td>Uncommon (20% Increase)</td></tr>
-    <tr><td>COOKED_SALMON</td><td>28</td><td><strong>30.8</strong></td><td>10.0%</td><td>22.4</td><td><strong>24.64</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>COOKIE</td><td>35</td><td><strong>38.5</strong></td><td>10.0%</td><td>28</td><td><strong>30.8</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>GLISTERING_MELON_SLICE</td><td>343</td><td><strong>441.03</strong></td><td>28.58%</td><td>274.4</td><td><strong>344.90</strong></td><td>25.69%</td><td>Recipe-based (Melon Slice + 8x Gold Nugget)</td></tr>
-    <tr><td>GLOW_BERRIES</td><td>15</td><td><strong>16.5</strong></td><td>10.0%</td><td>12</td><td><strong>13.2</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>GOLDEN_CARROT</td><td>343</td><td><strong>441.03</strong></td><td>28.58%</td><td>274.4</td><td><strong>344.90</strong></td><td>25.69%</td><td>Recipe-based (Carrot + 8x Gold Nugget)</td></tr>
-    <tr><td>HONEY_BOTTLE</td><td>15</td><td><strong>16.5</strong></td><td>10.0%</td><td>12</td><td><strong>13.2</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
+    <tr><td>APPLE</td><td>8.0</td><td><strong>11.12</strong></td><td>39.0%</td><td>6.4</td><td><strong>6.78</strong></td><td>5.9%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>BAKED_POTATO</td><td>15.0</td><td><strong>20.85</strong></td><td>39.0%</td><td>12.0</td><td><strong>12.72</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>COOKED_BEEF</td><td>28.0</td><td><strong>38.92</strong></td><td>39.0%</td><td>22.4</td><td><strong>23.74</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>COOKED_CHICKEN</td><td>28.0</td><td><strong>38.92</strong></td><td>39.0%</td><td>22.4</td><td><strong>23.74</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>COOKED_MUTTON</td><td>28.0</td><td><strong>38.92</strong></td><td>39.0%</td><td>22.4</td><td><strong>23.74</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>COOKED_PORKCHOP</td><td>28.0</td><td><strong>38.92</strong></td><td>39.0%</td><td>22.4</td><td><strong>23.74</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>COOKED_RABBIT</td><td>28.0</td><td><strong>38.92</strong></td><td>39.0%</td><td>22.4</td><td><strong>23.74</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>BEEF</td><td>28.0</td><td><strong>38.92</strong></td><td>39.0%</td><td>22.4</td><td><strong>23.74</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>CHICKEN</td><td>28.0</td><td><strong>38.92</strong></td><td>39.0%</td><td>22.4</td><td><strong>23.74</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>MUTTON</td><td>28.0</td><td><strong>38.92</strong></td><td>39.0%</td><td>22.4</td><td><strong>23.74</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>PORKCHOP</td><td>28.0</td><td><strong>38.92</strong></td><td>39.0%</td><td>22.4</td><td><strong>23.74</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>BREAD</td><td>15.0</td><td><strong>20.85</strong></td><td>39.0%</td><td>12.0</td><td><strong>12.72</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>RABBIT</td><td>15.0</td><td><strong>20.85</strong></td><td>39.0%</td><td>12.0</td><td><strong>12.72</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>BEETROOT_SOUP</td><td>44.0</td><td><strong>61.16</strong></td><td>39.0%</td><td>35.2</td><td><strong>37.31</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>CAKE</td><td>85.0</td><td><strong>118.15</strong></td><td>39.0%</td><td>68.0</td><td><strong>72.07</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>COOKED_SALMON</td><td>28.0</td><td><strong>38.92</strong></td><td>39.0%</td><td>22.4</td><td><strong>23.74</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>COOKIE</td><td>35.0</td><td><strong>48.65</strong></td><td>39.0%</td><td>28.0</td><td><strong>29.68</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>GLISTERING_MELON_SLICE</td><td>343.0</td><td><strong>476.77</strong></td><td>39.0%</td><td>274.4</td><td><strong>290.83</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>GLOW_BERRIES</td><td>15.0</td><td><strong>20.85</strong></td><td>39.0%</td><td>12.0</td><td><strong>12.72</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>GOLDEN_CARROT</td><td>343.0</td><td><strong>476.77</strong></td><td>39.0%</td><td>274.4</td><td><strong>290.83</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>HONEY_BOTTLE</td><td>15.0</td><td><strong>20.85</strong></td><td>39.0%</td><td>12.0</td><td><strong>12.72</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
   </tbody>
 </table>
