--- a/data/mobs.html
+++ b/data/mobs.html
@@ -2,34 +2,34 @@
   <thead>
     <tr>
       <th>Material</th>
-      <th>Old Buy Price</th>
-      <th>New Buy Price</th>
-      <th>Buy Price Change (%)</th>
-      <th>Old Sell Price</th>
-      <th>New Sell Price</th>
-      <th>Sell Price Change (%)</th>
-      <th>Rarity/Logic Applied</th>
+      <th>Old Buy</th>
+      <th>New Buy</th>
+      <th>Buy %</th>
+      <th>Old Sell</th>
+      <th>New Sell</th>
+      <th>Sell %</th>
+      <th>Logic</th>
     </tr>
   </thead>
   <tbody>
-    <tr><td>ARROW</td><td>2.26</td><td><strong>13.2</strong></td><td>484.07%</td><td>0.57</td><td><strong>6.93</strong></td><td>1115.79%</td><td>Recipe-based (Flint, Stick, Feather)</td></tr>
-    <tr><td>BLAZE_POWDER</td><td>2.63</td><td><strong>2.75</strong></td><td>4.56%</td><td>0.66</td><td><strong>0.6875</strong></td><td>4.17%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>BLAZE_ROD</td><td>5</td><td><strong>5.5</strong></td><td>10.0%</td><td>1.25</td><td><strong>1.375</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>BONE</td><td>6</td><td><strong>6.6</strong></td><td>10.0%</td><td>1.5</td><td><strong>1.65</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>BREEZE_ROD</td><td>20</td><td><strong>22.0</strong></td><td>10.0%</td><td>5</td><td><strong>5.5</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>ENDER_PEARL</td><td>7</td><td><strong>7.7</strong></td><td>10.0%</td><td>1.75</td><td><strong>1.93</strong></td><td>10.29%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>FEATHER</td><td>6</td><td><strong>6.6</strong></td><td>10.0%</td><td>1.5</td><td><strong>1.65</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>FERMENTED_SPIDER_EYE</td><td>9.57</td><td><strong>29.7</strong></td><td>210.34%</td><td>2.4</td><td><strong>18.705</strong></td><td>679.38%</td><td>Recipe-based (Spider Eye, Brown Mushroom, Sugar)</td></tr>
-    <tr><td>GHAST_TEAR</td><td>40</td><td><strong>44.0</strong></td><td>10.0%</td><td>10</td><td><strong>11.0</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>GUNPOWDER</td><td>15.5</td><td><strong>17.05</strong></td><td>10.0%</td><td>3.88</td><td><strong>4.27</strong></td><td>10.05%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>MAGMA_CREAM</td><td>8.01</td><td><strong>8.81</strong></td><td>9.99%</td><td>2.01</td><td><strong>2.21</strong></td><td>9.95%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>NAUTILUS_SHELL</td><td>180</td><td><strong>198.0</strong></td><td>10.0%</td><td>45</td><td><strong>49.5</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>PHANTOM_MEMBRANE</td><td>125.15</td><td><strong>137.67</strong></td><td>10.0%</td><td>31.29</td><td><strong>34.42</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>RABBIT_FOOT</td><td>180</td><td><strong>198.0</strong></td><td>10.0%</td><td>45</td><td><strong>49.5</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>RABBIT_HIDE</td><td>8</td><td><strong>8.8</strong></td><td>10.0%</td><td>2</td><td><strong>2.2</strong></td><td>10.0%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>ROTTEN_FLESH</td><td>5</td><td><strong>5.5</strong></td><td>10.0%</td><td>1.25</td><td><strong>1.38</strong></td><td>10.4%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>SLIME_BALL</td><td>5</td><td><strong>5.5</strong></td><td>10.0%</td><td>1.25</td><td><strong>1.38</strong></td><td>10.4%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>SPIDER_EYE</td><td>7</td><td><strong>7.7</strong></td><td>10.0%</td><td>1.75</td><td><strong>1.93</strong></td><td>10.29%</td><td>Common (10% Increase)</td></tr>
-    <tr><td>STRING</td><td>7</td><td><strong>7.7</strong></td><td>10.0%</td><td>1.75</td><td><strong>1.93</strong></td><td>10.29%</td><td>Common (10% Increase)</td></tr>
+    <tr><td>ARROW</td><td>2.26</td><td><strong>3.14</strong></td><td>39.0%</td><td>0.57</td><td><strong>1.92</strong></td><td>236.8%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>BLAZE_POWDER</td><td>2.63</td><td><strong>3.66</strong></td><td>39.0%</td><td>0.66</td><td><strong>2.23</strong></td><td>237.9%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>BLAZE_ROD</td><td>5.0</td><td><strong>6.95</strong></td><td>39.0%</td><td>1.25</td><td><strong>4.24</strong></td><td>239.2%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>BONE</td><td>6.0</td><td><strong>8.34</strong></td><td>39.0%</td><td>1.5</td><td><strong>5.09</strong></td><td>239.3%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>BREEZE_ROD</td><td>20.0</td><td><strong>27.8</strong></td><td>39.0%</td><td>5.0</td><td><strong>16.96</strong></td><td>239.2%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>ENDER_PEARL</td><td>7.0</td><td><strong>9.73</strong></td><td>39.0%</td><td>1.75</td><td><strong>5.94</strong></td><td>239.4%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>FEATHER</td><td>6.0</td><td><strong>8.34</strong></td><td>39.0%</td><td>1.5</td><td><strong>5.09</strong></td><td>239.3%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>FERMENTED_SPIDER_EYE</td><td>9.57</td><td><strong>13.3</strong></td><td>39.0%</td><td>2.4</td><td><strong>8.11</strong></td><td>237.9%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>GHAST_TEAR</td><td>40.0</td><td><strong>55.6</strong></td><td>39.0%</td><td>10.0</td><td><strong>33.92</strong></td><td>239.2%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>GUNPOWDER</td><td>15.5</td><td><strong>21.55</strong></td><td>39.0%</td><td>3.88</td><td><strong>13.15</strong></td><td>238.9%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>MAGMA_CREAM</td><td>8.01</td><td><strong>11.13</strong></td><td>39.0%</td><td>2.01</td><td><strong>6.79</strong></td><td>237.8%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>NAUTILUS_SHELL</td><td>180.0</td><td><strong>250.2</strong></td><td>39.0%</td><td>45.0</td><td><strong>152.62</strong></td><td>239.2%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>PHANTOM_MEMBRANE</td><td>125.15</td><td><strong>173.96</strong></td><td>39.0%</td><td>31.29</td><td><strong>106.12</strong></td><td>239.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>RABBIT_FOOT</td><td>180.0</td><td><strong>250.2</strong></td><td>39.0%</td><td>45.0</td><td><strong>152.62</strong></td><td>239.2%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>RABBIT_HIDE</td><td>8.0</td><td><strong>11.12</strong></td><td>39.0%</td><td>2.0</td><td><strong>6.78</strong></td><td>239.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>ROTTEN_FLESH</td><td>5.0</td><td><strong>6.95</strong></td><td>39.0%</td><td>1.25</td><td><strong>4.24</strong></td><td>239.2%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>SLIME_BALL</td><td>5.0</td><td><strong>6.95</strong></td><td>39.0%</td><td>1.25</td><td><strong>4.24</strong></td><td>239.2%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>SPIDER_EYE</td><td>7.0</td><td><strong>9.73</strong></td><td>39.0%</td><td>1.75</td><td><strong>5.94</strong></td><td>239.4%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>STRING</td><td>7.0</td><td><strong>9.73</strong></td><td>39.0%</td><td>1.75</td><td><strong>5.94</strong></td><td>239.4%</td><td>39% Hike, 39% Gap</td></tr>
   </tbody>
 </table>
