--- a/data/music.html
+++ b/data/music.html
@@ -2,58 +2,42 @@
   <thead>
     <tr>
       <th>Material</th>
-      <th>Old Buy Price</th>
-      <th>New Buy Price</th>
-      <th>Buy Price Change (%)</th>
-      <th>Old Sell Price</th>
-      <th>New Sell Price</th>
-      <th>Sell Price Change (%)</th>
-      <th>Rarity/Logic Applied</th>
+      <th>Old Buy</th>
+      <th>New Buy</th>
+      <th>Buy %</th>
+      <th>Old Sell</th>
+      <th>New Sell</th>
+      <th>Sell %</th>
+      <th>Logic</th>
     </tr>
   </thead>
   <tbody>
-    <tr><td>MUSIC_DISC_11</td><td>75</td><td><strong>90.0</strong></td><td>20.0%</td><td>18.75</td><td><strong>22.5</strong></td><td>20.0%</td><td>Uncommon (20% Increase)</td></tr>
-    <tr><td>MUSIC_DISC_13</td><td>75</td><td><strong>90.0</strong></td><td>20.0%</td><td>18.75</td><td><strong>22.5</strong></td><td>20.0%</td><td>Uncommon (20% Increase)</td></tr>
-    <tr><td>MUSIC_DISC_5</td><td>945</td><td><strong>1134.0</strong></td><td>20.0%</td><td>236.25</td><td><strong>283.5</strong></td><td>20.0%</td><td>Uncommon (20% Increase)</td></tr>
-    <tr><td>MUSIC_DISC_BLOCKS</td><td>75</td><td><strong>90.0</strong></td><td>20.0%</td><td>18.75</td><td><strong>22.5</strong></td><td>20.0%</td><td>Uncommon (20% Increase)</td></tr>
-    <tr><td>MUSIC_DISC_CAT</td><td>75</td><td><strong>90.0</strong></td><td>20.0%</td><td>18.75</td><td><strong>22.5</strong></td><td>20.0%</td><td>Uncommon (20% Increase)</td></tr>
-    <tr><td>MUSIC_DISC_CHIRP</td><td>75</td><td><strong>90.0</strong></td><td>20.0%</td><td>18.75</td><td><strong>22.5</strong></td><td>20.0%</td><td>Uncommon (20% Increase)</td></tr>
-    <tr><td>MUSIC_DISC_CREATOR</td><td>100</td><td><strong>120.0</strong></td><td>20.0%</td><td>25</td><td><strong>30.0</strong></td><td>20.0%</td><td>Uncommon (20% Increase)</td></tr>
-    <tr><td>MUSIC_DISC_CREATOR_MUSIC_BOX</td><td>100</td><td><strong>120.0</strong></td><td>20.0%</td><td>25</td><td><strong>30.0</strong></td><td>20.0%</td><td>Uncommon (20% Increase)</td></tr>
-    <tr><td>MUSIC_DISC_FAR</td><td>75</td><td><strong>90.0</strong></td><td>20.0%</td><td>18.75</td><td><strong>22.5</strong></td><td>20.0%</td><td>Uncommon (20% Increase)</td></tr>
-    <tr><td>MUSIC_DISC_MALL</td><td>75</td><td><strong>90.0</strong></td><td>20.0%</td><td>18.75</td><td><strong>22.5</strong></td><td>20.0%</td><td>Uncommon (20% Increase)</td></tr>
-    <tr><td>MUSIC_DISC_MELLOHI</td><td>75</td><td><strong>90.0</strong></td><td>20.0%</td><td>18.75</td><td><strong>22.5</strong></td><td>20.0%</td><td>Uncommon (20% Increase)</td></tr>
-    <tr><td>MUSIC_DISC_OTHERSIDE</td><td>75</td><td><strong>90.0</strong></td><td>20.0%</td><td>18.75</td><td><strong>22.5</strong></td><td>20.0%</td><td>Uncommon (20% Increase)</td></tr>
-    <tr><td>MUSIC_DISC_PIGSTEP</td><td>75</td><td><strong>90.0</strong></td><td>20.0%</td><td>18.75</td><td><strong>22.5</strong></td><td>20.0%</td><td>Uncommon (20% Increase)</td></tr>
-    <tr><td>MUSIC_DISC_PRECIPICE</td><td>100</td><td><strong>120.0</strong></td><td>20.0%</td><td>25</td><td><strong>30.0</strong></td><td>20.0%</td><td>Uncommon (20% Increase)</td></tr>
-    <tr><td>MUSIC_DISC_RELIC</td><td>100</td><td><strong>120.0</strong></td><td>20.0%</td><td>25</td><td><strong>30.0</strong></td><td>20.0%</td><td>Uncommon (20% Increase)</td></tr>
-    <tr><td>MUSIC_DISC_STAL</td><td>75</td><td><strong>90.0</strong></td><td>20.0%</td><td>18.75</td><td><strong>22.5</strong></td><td>20.0%</td><td>Uncommon (20% Increase)</td></tr>
-    <tr><td>MUSIC_DISC_STRAD</td><td>75</td><td><strong>90.0</strong></td><td>20.0%</td><td>18.75</td><td><strong>22.5</strong></td><td>20.0%</td><td>Uncommon (20% Increase)</td></tr>
-    <tr><td>MUSIC_DISC_WAIT</td><td>75</td><td><strong>90.0</strong></td><td>20.0%</td><td>18.75</td><td><strong>22.5</strong></td><td>20.0%</td><td>Uncommon (20% Increase)</td></tr>
-    <tr><td>MUSIC_DISC_WARD</td><td>75</td><td><strong>90.0</strong></td><td>20.0%</td><td>18.75</td><td><strong>22.5</strong></td><td>20.0%</td><td>Uncommon (20% Increase)</td></tr>
-    <tr><td>GOAT_HORN (ponder)</td><td>100</td><td><strong>120.0</strong></td><td>20.0%</td><td>25</td><td><strong>30.0</strong></td><td>20.0%</td><td>Uncommon (20% Increase)</td></tr>
-    <tr><td>GOAT_HORN (admire)</td><td>100</td><td><strong>120.0</strong></td><td>20.0%</td><td>25</td><td><strong>30.0</strong></td><td>20.0%</td><td>Uncommon (20% Increase)</td></tr>
-    <tr><td>GOAT_HORN (call)</td><td>100</td><td><strong>120.0</strong></td><td>20.0%</td><td>25</td><td><strong>30.0</strong></td><td>20.0%</td><td>Uncommon (20% Increase)</td></tr>
-    <tr><td>GOAT_HORN (dream)</td><td>100</td><td><strong>120.0</strong></td><td>20.0%</td><td>25</td><td><strong>30.0</strong></td><td>20.0%</td><td>Uncommon (20% Increase)</td></tr>
-    <tr><td>GOAT_HORN (feel)</td><td>100</td><td><strong>120.0</strong></td><td>20.0%</td><td>25</td><td><strong>30.0</strong></td><td>20.0%</td><td>Uncommon (20% Increase)</td></tr>
-  </tbody>
-</table>
-<table>
-  <thead>
-    <tr>
-      <th>Material</th>
-      <th>Old Buy Price</th>
-      <th>New Buy Price</th>
-      <th>Buy Price Change (%)</th>
-      <th>Old Sell Price</th>
-      <th>New Sell Price</th>
-      <th>Sell Price Change (%)</th>
-      <th>Rarity/Logic Applied</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr><td>GOAT_HORN (seek)</td><td>100</td><td><strong>120.0</strong></td><td>20.0%</td><td>25</td><td><strong>30.0</strong></td><td>20.0%</td><td>Uncommon (20% Increase)</td></tr>
-    <tr><td>GOAT_HORN (sing)</td><td>100</td><td><strong>120.0</strong></td><td>20.0%</td><td>25</td><td><strong>30.0</strong></td><td>20.0%</td><td>Uncommon (20% Increase)</td></tr>
-    <tr><td>GOAT_HORN (yearn)</td><td>100</td><td><strong>120.0</strong></td><td>20.0%</td><td>25</td><td><strong>30.0</strong></td><td>20.0%</td><td>Uncommon (20% Increase)</td></tr>
+    <tr><td>MUSIC_DISC_11</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>MUSIC_DISC_13</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>MUSIC_DISC_5</td><td>945.0</td><td><strong>1313.55</strong></td><td>39.0%</td><td>236.25</td><td><strong>801.27</strong></td><td>239.2%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>MUSIC_DISC_BLOCKS</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>MUSIC_DISC_CAT</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>MUSIC_DISC_CHIRP</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>MUSIC_DISC_CREATOR</td><td>100.0</td><td><strong>139.0</strong></td><td>39.0%</td><td>25.0</td><td><strong>84.79</strong></td><td>239.2%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>MUSIC_DISC_CREATOR_MUSIC_BOX</td><td>100.0</td><td><strong>139.0</strong></td><td>39.0%</td><td>25.0</td><td><strong>84.79</strong></td><td>239.2%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>MUSIC_DISC_FAR</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>MUSIC_DISC_MALL</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>MUSIC_DISC_MELLOHI</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>MUSIC_DISC_OTHERSIDE</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>MUSIC_DISC_PIGSTEP</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>MUSIC_DISC_PRECIPICE</td><td>100.0</td><td><strong>139.0</strong></td><td>39.0%</td><td>25.0</td><td><strong>84.79</strong></td><td>239.2%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>MUSIC_DISC_RELIC</td><td>100.0</td><td><strong>139.0</strong></td><td>39.0%</td><td>25.0</td><td><strong>84.79</strong></td><td>239.2%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>MUSIC_DISC_STAL</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>MUSIC_DISC_STRAD</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>MUSIC_DISC_WAIT</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>MUSIC_DISC_WARD</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>GOAT_HORN</td><td>100.0</td><td><strong>139.0</strong></td><td>39.0%</td><td>25.0</td><td><strong>84.79</strong></td><td>239.2%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>GOAT_HORN</td><td>100.0</td><td><strong>139.0</strong></td><td>39.0%</td><td>25.0</td><td><strong>84.79</strong></td><td>239.2%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>GOAT_HORN</td><td>100.0</td><td><strong>139.0</strong></td><td>39.0%</td><td>25.0</td><td><strong>84.79</strong></td><td>239.2%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>GOAT_HORN</td><td>100.0</td><td><strong>139.0</strong></td><td>39.0%</td><td>25.0</td><td><strong>84.79</strong></td><td>239.2%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>GOAT_HORN</td><td>100.0</td><td><strong>139.0</strong></td><td>39.0%</td><td>25.0</td><td><strong>84.79</strong></td><td>239.2%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>GOAT_HORN</td><td>100.0</td><td><strong>139.0</strong></td><td>39.0%</td><td>25.0</td><td><strong>84.79</strong></td><td>239.2%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>GOAT_HORN</td><td>100.0</td><td><strong>139.0</strong></td><td>39.0%</td><td>25.0</td><td><strong>84.79</strong></td><td>239.2%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>GOAT_HORN</td><td>100.0</td><td><strong>139.0</strong></td><td>39.0%</td><td>25.0</td><td><strong>84.79</strong></td><td>239.2%</td><td>39% Hike, 39% Gap</td></tr>
   </tbody>
 </table>
