--- a/data/ores.html
+++ b/data/ores.html
@@ -2,39 +2,39 @@
   <thead>
     <tr>
       <th>Material</th>
-      <th>Old Buy Price</th>
-      <th>New Buy Price</th>
-      <th>Buy Price Change (%)</th>
-      <th>Old Sell Price</th>
-      <th>New Sell Price</th>
-      <th>Sell Price Change (%)</th>
-      <th>Rarity/Logic Applied</th>
+      <th>Old Buy</th>
+      <th>New Buy</th>
+      <th>Buy %</th>
+      <th>Old Sell</th>
+      <th>New Sell</th>
+      <th>Sell %</th>
+      <th>Logic</th>
     </tr>
   </thead>
   <tbody>
-    <tr><td>AMETHYST_BLOCK</td><td>35</td><td><strong>45.5</strong></td><td>30.0%</td><td>25.59</td><td><strong>33.27</strong></td><td>30.0%</td><td>30% Increase</td></tr>
-    <tr><td>AMETHYST_SHARD</td><td>10</td><td><strong>13.0</strong></td><td>30.0%</td><td>6.57</td><td><strong>8.54</strong></td><td>30.0%</td><td>30% Increase</td></tr>
-    <tr><td>ANCIENT_DEBRIS</td><td>1750</td><td><strong>2625.0</strong></td><td>50.0%</td><td>1400</td><td><strong>2100.0</strong></td><td>50.0%</td><td>50% Increase</td></tr>
-    <tr><td>COAL</td><td>25</td><td><strong>32.5</strong></td><td>30.0%</td><td>20.45</td><td><strong>26.59</strong></td><td>30.0%</td><td>30% Increase</td></tr>
-    <tr><td>COAL_BLOCK</td><td>225</td><td><strong>292.5</strong></td><td>30.0%</td><td>166.84</td><td><strong>217.09</strong></td><td>30.0%</td><td>Recipe-based (9x Coal)</td></tr>
-    <tr><td>COPPER_BLOCK</td><td>45</td><td><strong>58.5</strong></td><td>30.0%</td><td>35.9</td><td><strong>46.67</strong></td><td>30.0%</td><td>30% Increase</td></tr>
-    <tr><td>COPPER_INGOT</td><td>4.5</td><td><strong>5.85</strong></td><td>30.0%</td><td>3.16</td><td><strong>4.11</strong></td><td>30.0%</td><td>30% Increase</td></tr>
-    <tr><td>COPPER_ORE</td><td>30</td><td><strong>39.0</strong></td><td>30.0%</td><td>23.0</td><td><strong>29.9</strong></td><td>30.0%</td><td>30% Increase</td></tr>
-    <tr><td>DIAMOND</td><td>1500</td><td><strong>2250.0</strong></td><td>50.0%</td><td>1102.89</td><td><strong>1654.34</strong></td><td>50.0%</td><td>50% Increase</td></tr>
-    <tr><td>DIAMOND_BLOCK</td><td>13500</td><td><strong>20250.0</strong></td><td>50.0%</td><td>8882.47</td><td><strong>13323.71</strong></td><td>50.0%</td><td>Recipe-based (9x Diamond)</td></tr>
-    <tr><td>EMERALD</td><td>120</td><td><strong>156.0</strong></td><td>30.0%</td><td>83.31</td><td><strong>108.3</strong></td><td>30.0%</td><td>30% Increase</td></tr>
-    <tr><td>EMERALD_BLOCK</td><td>1080</td><td><strong>1404.0</strong></td><td>30.0%</td><td>709.22</td><td><strong>921.99</strong></td><td>30.0%</td><td>Recipe-based (9x Emerald)</td></tr>
-    <tr><td>GOLD_BLOCK</td><td>3000</td><td><strong>3900.0</strong></td><td>30.0%</td><td>2276.02</td><td><strong>2958.83</strong></td><td>30.0%</td><td>Recipe-based (9x Gold Ingot)</td></tr>
-    <tr><td>GOLD_INGOT</td><td>375</td><td><strong>487.5</strong></td><td>30.0%</td><td>293.48</td><td><strong>381.52</strong></td><td>30.0%</td><td>30% Increase</td></tr>
-    <tr><td>IRON_BLOCK</td><td>900</td><td><strong>1170.0</strong></td><td>30.0%</td><td>647.62</td><td><strong>841.91</strong></td><td>30.0%</td><td>Recipe-based (9x Iron Ingot)</td></tr>
-    <tr><td>IRON_INGOT</td><td>100</td><td><strong>130.0</strong></td><td>30.0%</td><td>80.28</td><td><strong>104.36</strong></td><td>30.0%</td><td>30% Increase</td></tr>
-    <tr><td>LAPIS_BLOCK</td><td>75</td><td><strong>97.5</strong></td><td>30.0%</td><td>50.03</td><td><strong>65.04</strong></td><td>30.0%</td><td>30% Increase</td></tr>
-    <tr><td>LAPIS_LAZULI</td><td>10</td><td><strong>13.0</strong></td><td>30.0%</td><td>7.1</td><td><strong>9.23</strong></td><td>30.0%</td><td>30% Increase</td></tr>
-    <tr><td>NETHERITE_BLOCK</td><td>76500</td><td><strong>114750.0</strong></td><td>50.0%</td><td>60965.28</td><td><strong>91447.92</strong></td><td>50.0%</td><td>Recipe-based (9x Netherite Ingot)</td></tr>
-    <tr><td>NETHERITE_INGOT</td><td>8500</td><td><strong>12750.0</strong></td><td>50.0%</td><td>6773.92</td><td><strong>10160.88</strong></td><td>50.0%</td><td>50% Increase (Component-based)</td></tr>
-    <tr><td>QUARTZ</td><td>7</td><td><strong>9.1</strong></td><td>30.0%</td><td>5.4</td><td><strong>7.02</strong></td><td>30.0%</td><td>30% Increase</td></tr>
-    <tr><td>QUARTZ_BLOCK</td><td>28</td><td><strong>36.4</strong></td><td>30.0%</td><td>18.85</td><td><strong>24.51</strong></td><td>30.0%</td><td>30% Increase</td></tr>
-    <tr><td>REDSTONE</td><td>15</td><td><strong>19.5</strong></td><td>30.0%</td><td>9.85</td><td><strong>12.81</strong></td><td>30.0%</td><td>30% Increase</td></tr>
-    <tr><td>REDSTONE_BLOCK</td><td>135</td><td><strong>175.5</strong></td><td>30.0%</td><td>109.58</td><td><strong>142.45</strong></td><td>30.0%</td><td>30% Increase</td></tr>
+    <tr><td>AMETHYST_BLOCK</td><td>48.65</td><td><strong>67.62</strong></td><td>39.0%</td><td>29.68</td><td><strong>41.25</strong></td><td>39.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>DIAMOND_BLOCK</td><td>18765.0</td><td><strong>26083.35</strong></td><td>39.0%</td><td>11446.65</td><td><strong>15910.84</strong></td><td>39.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>EMERALD</td><td>166.8</td><td><strong>231.85</strong></td><td>39.0%</td><td>101.75</td><td><strong>141.43</strong></td><td>39.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>EMERALD_BLOCK</td><td>1501.2</td><td><strong>2086.67</strong></td><td>39.0%</td><td>915.73</td><td><strong>1272.87</strong></td><td>39.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>GOLD_BLOCK</td><td>4170.0</td><td><strong>5796.3</strong></td><td>39.0%</td><td>2543.7</td><td><strong>3535.74</strong></td><td>39.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>GOLD_INGOT</td><td>521.25</td><td><strong>724.54</strong></td><td>39.0%</td><td>317.96</td><td><strong>441.97</strong></td><td>39.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>IRON_BLOCK</td><td>1251.0</td><td><strong>1738.89</strong></td><td>39.0%</td><td>763.11</td><td><strong>1060.72</strong></td><td>39.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>IRON_INGOT</td><td>139.0</td><td><strong>193.21</strong></td><td>39.0%</td><td>84.79</td><td><strong>117.86</strong></td><td>39.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>LAPIS_BLOCK</td><td>104.25</td><td><strong>144.91</strong></td><td>39.0%</td><td>63.59</td><td><strong>88.4</strong></td><td>39.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>LAPIS_LAZULI</td><td>13.9</td><td><strong>19.32</strong></td><td>39.0%</td><td>8.48</td><td><strong>11.79</strong></td><td>39.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>NETHERITE_BLOCK</td><td>106335.0</td><td><strong>147805.65</strong></td><td>39.0%</td><td>64864.35</td><td><strong>90161.45</strong></td><td>39.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>AMETHYST_SHARD</td><td>13.9</td><td><strong>19.32</strong></td><td>39.0%</td><td>8.48</td><td><strong>11.79</strong></td><td>39.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>NETHERITE_INGOT</td><td>11815.0</td><td><strong>16422.85</strong></td><td>39.0%</td><td>7207.15</td><td><strong>10017.94</strong></td><td>39.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>QUARTZ</td><td>9.73</td><td><strong>13.52</strong></td><td>39.0%</td><td>5.94</td><td><strong>8.25</strong></td><td>38.9%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>QUARTZ_BLOCK</td><td>38.92</td><td><strong>54.1</strong></td><td>39.0%</td><td>23.74</td><td><strong>33.0</strong></td><td>39.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>REDSTONE</td><td>20.85</td><td><strong>28.98</strong></td><td>39.0%</td><td>12.72</td><td><strong>17.68</strong></td><td>39.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>REDSTONE_BLOCK</td><td>187.65</td><td><strong>260.83</strong></td><td>39.0%</td><td>114.47</td><td><strong>159.11</strong></td><td>39.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>ANCIENT_DEBRIS</td><td>2432.5</td><td><strong>3381.18</strong></td><td>39.0%</td><td>1483.83</td><td><strong>2062.52</strong></td><td>39.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>COAL</td><td>34.75</td><td><strong>48.3</strong></td><td>39.0%</td><td>21.2</td><td><strong>29.46</strong></td><td>39.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>COAL_BLOCK</td><td>312.75</td><td><strong>434.72</strong></td><td>39.0%</td><td>190.78</td><td><strong>265.18</strong></td><td>39.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>COPPER_BLOCK</td><td>62.55</td><td><strong>86.94</strong></td><td>39.0%</td><td>38.16</td><td><strong>53.03</strong></td><td>39.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>COPPER_INGOT</td><td>6.26</td><td><strong>8.7</strong></td><td>39.0%</td><td>3.82</td><td><strong>5.31</strong></td><td>39.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>COPPER_ORE</td><td>41.7</td><td><strong>57.96</strong></td><td>39.0%</td><td>25.44</td><td><strong>35.36</strong></td><td>39.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>DIAMOND</td><td>2085.0</td><td><strong>2898.15</strong></td><td>39.0%</td><td>1271.85</td><td><strong>1767.87</strong></td><td>39.0%</td><td>39% Hike, 39% Gap</td></tr>
   </tbody>
 </table>
