--- a/data/spawners.html
+++ b/data/spawners.html
@@ -2,16 +2,15 @@
   <thead>
     <tr>
       <th>Material</th>
-      <th>Old Buy Price</th>
-      <th>New Buy Price</th>
-      <th>Buy Price Change (%)</th>
-      <th>Old Sell Price</th>
-      <th>New Sell Price</th>
-      <th>Sell Price Change (%)</th>
-      <th>Rarity/Logic Applied</th>
+      <th>Old Buy</th>
+      <th>New Buy</th>
+      <th>Buy %</th>
+      <th>Old Sell</th>
+      <th>New Sell</th>
+      <th>Sell %</th>
+      <th>Logic</th>
     </tr>
   </thead>
   <tbody>
-    <tr><td>STICK</td><td>1234</td><td><strong>1234</strong></td><td>0.0%</td><td>123</td><td><strong>123</strong></td><td>0.0%</td><td>Original Example Item</td></tr>
   </tbody>
 </table>
